 -------------------------------------------

 List of changes for all supported software

 -------------------------------------------

5/4/15
- root version for devel changed to 5.34.30


2/19/15
- fixed wrong log for get_coptions w/o parameters. Now giving "env" argument to it. Fixes for both 1.2 and devel versions
- devel versions upgrades
  clhep 2.2.0.5
  qt 5.4
  geant4 10.1 (including data)
  evio 4.4.4


2/11/15
- added i686 case for qt path

2/9/15
- first commit to github
- Removed expat from dependencies
- Added xcode developers tools installation instructions
- Distinguishing between devel and 1.2 install instructions
- Fixed tar command, directory list is at the end
- Removed gemc 1.8 case

2/3/15
- added html instructions for the packages installation
- automatically install instructions when tarballing ceInstall
- importing correct solenoid field map for clas12

1/29/15
- copied qt installer to jlab repo
- modified go_qt, using QT_VERSION
- qt versions for 1.2 is 5.3.2
- fixed qt installation path to first two version digits
- added sources reminder in go_qt

1/28/15
- adding skipping of certificate check for wget commands
- releasing JLAB_VERSION 1.2
- automatic download of qt installer with go_qt



1/21/15
- changed http to https in the jlab path in get_coptions
- path set even if variables are set manually


11/11/14
- geant4 from 10.00.p02 to 10.00.p03.
- go_geant4 modified accordingly, with added instructions on how to compile the examples

11/5/14
- Fixed qt installation path, go_qt will instruct how to install qt from the installer
- adding QTSYSTEM variable to account for different paths in Mac/Linux

11/3/14
- devel ROOT version changed to 5.34.21
- removed go_qt now obsolete
- patched go_geant4 for linux with CMAKE_CXX_FLAGS (for cmake < 3)
- added go_qt with instructions on how to install qt from qt website
- fixed go_tar comand line
- removed 1.8 from go_tar
- typo on the requirement doc

10/28/14
- Added CCDB to environment (testing)